--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-website",
-  "homepage": "https://igorpenedos.github.io/personal-website",
+  "homepage": "https://igorpenedos.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
